Исправления по замечаниям Костенко от 01.07.21.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -1,4 +1,4 @@
-\chapter{Разработка адаптивного к скорости метода управления ДРК ПА}\label{ch:Allocation}
+\chapter{Разработка адаптивного к скорости движения ПА метода управления ДРК ПА}\label{ch:Allocation}
 
 \section{Формальное описание структуры ДРК}\label{sec:Allocation/System}
 \begin{noteplan}
@@ -208,7 +208,7 @@
 \end{equation}
 
 Пусть $m=6$ и требуется создать вектор сил и моментов $\vect{\nu}$.
-Для решения задачи распределения вектора упоров между движителями необходимо решить систему линейных уравнений \ref{eq:propulsion_connection}.
+Для решения задачи управления ДРК необходимо решить систему линейных уравнений \ref{eq:propulsion_connection}.
 При этом можно показать что при выполнении условия \ref{eq:propulsion_matrix_rank_com} решение системы \ref{eq:propulsion_connection} всегда существует, однако может быть не единственным.
 Это означает что заданную управляющую силу можно создать при различных сочетаниях векторов упоров на движителях.
 Такие ДРК называются \textbf{избыточными}, в отличие от неизбыточных, когда распределение упоров можду движителями может быть единственным.
@@ -258,9 +258,9 @@
 	Эта часть еще сырая, буду её серьезно перерабатывать.
 \end{noteplan}
 Уравнение \ref{eq:propulsion_connection} не поддерживает рули управления как один из способов контроля движения ПА.
-Это исторически отдельная задача и ей посвящено достаточно много литературы в области управления летательными аппаратами, но рули управления также широко распространены и в подводных аппаратах, и задача распределения управляющих воздействий между этими исполнительными механизмами остаётся актуальной.
+Это исторически отдельная задача и ей посвящено достаточно много литературы в области управления летательными аппаратами, но рули управления также широко распространены и в подводных аппаратах, и задача управления ДРК между этими исполнительными механизмами остаётся актуальной.
 
-Так например в работе \cite{10.1177/1729881417741738} закон линейной взаимосвязи между обобщенным вектором силы и момента в связанной системе координат BODY $\vect{\nu}$ и вектором углов поворота движителей $\vect{\delta}$, определяется следующим образом:
+Так например в работе \cite{10.1177/1729881417741738} закон линейной взаимосвязи между обобщенным вектором силы и момента в связанной системе координат BODY $\vect{\nu}$ и вектором углов поворота рулей $\vect{\delta}$, определяется следующим образом:
 \begin{equation}
     \begin{pmatrix}
         X \\
@@ -294,15 +294,11 @@
     \item $X_{\delta_i, \delta_i}, \ldots, N_{\delta_i}$ -- коэффициент сил и моментов создаваемых РУ при скорости набегаемого потока $u$.
 \end{itemize}
 
-\section{Формирование фиксированных пропорций значений целевого управления}\label{sec:Allocation/System}
+% \section{Формирование фиксированных пропорций значений целевого управления}\label{sec:Allocation/System}
 
 \section{Метод адаптивного управления ДРК ПА} \label{sec:Allocation/Method}
 
 \subsection{Задача оптимального управления ДРК ПА}
-\begin{notequestion}
-	Заново постановка задачи оптимального управления ДРК. Для тех кто забыл всё из первой главы пока до сюда добрался.
-	Может и не писать?
-\end{notequestion}
 Согласно выражению \ref{eq:Statement/AllocationProblem} задача оптимального управления ДРК ПА ставится следующим образом:
 
 \begin{equation}
@@ -321,10 +317,13 @@
     \item $s$ -- невязку вектора виртуального управления, которая определяет меру различия между заданным и сформированным вектором управления;
     \item $Q_{\nu}$ -- матрица, формализующая приоритеты работы тех или иных осей управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
     \item $J(\vect{x}, \vect{u}, t)$ -- некоторый функционал качества.
+    \item $\mathspace{U}$ -- подмножество в котором задан вектор команд управления $\vect{u}$, вызванное насыщением статической характеристики движителей, механическими ограничениями угла поворота рулей или иными особенностями исполнительных механизмов.
 \end{itemize}
 
 В разделе \ref{sec:Statement/Methods} перечислены различные методы используемые для решения задачи управления избыточного ДРК ПА, как оптимальные так и нет.
 Все методы имеют свои преимущества и недостатки.
+
+\subsection{Формирование матрицы обобщенной геометрии ДРК}
 
 \subsection{Решение задачи оптимизации через теорему о сжимающем прострастве}
 
@@ -426,39 +425,39 @@
     \end{tabular}
 \end{table}
 
-В рамках исследования было произведено сравнение работы предлагаемого метода с методом распределения управляющего воздействия, который реализован на АНПА ``ММТ-300'' и описан в разделе \ref{sssec:AllocationFix}.
+В рамках исследования было произведено сравнение работы предлагаемого метода с методом управления ДРК, который реализован на АНПА ``ММТ-300'' и описан в разделе \ref{sssec:AllocationFix}.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный упоры.png}
-    \caption{Распределение управления методом прямого распределения с масштабированием.}
+    \caption{Распределение упоров методом прямого управления ДРК с масштабированием.}
     \label{fig:mmt-300-allocation-fix-thrust}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный силы.png}
-    \caption{Силы и моменты при прямом распределении с масштабированием.}
+    \caption{Силы и моменты при прямом управлении с масштабированием.}
     \label{fig:mmt-300-allocation-fix-force}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный Упоры.png}
-    \caption{Распределение управления предлагаемым методом.}
+    \caption{Распределение упоров адаптивным методом.}
     \label{fig:mmt-300-allocation-optimal-thrust}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный силы.png}
-    \caption{Силы и моменты при предлагаемом методе.}
+    \caption{Силы и моменты при адаптивном методе.}
     \label{fig:mmt-300-allocation-optimal-force}
 \end{figure}
 
 \section{Структура программного обеспечения для реализации предложенного метода} \label{sec:Allocation/Software}
 \begin{noteplan}
-	Добавлю структурное описание ПО для реализации метода распределения.
+	Добавлю структурное описание ПО для реализации метода адаптивного управления.
 \end{noteplan}
 
 \section{Выводы по главе 4}
