--- a/Dissertation/partExperiment.tex
+++ b/Dissertation/partExperiment.tex
@@ -1,4 +1,4 @@
-\chapter{Исседование эффективности адаптивного распределения управляющего воздействия}\label{ch:Experiment}
+\chapter{Исседование эффективности адаптивного управления ДРК}\label{ch:Experiment}
 \section{Модель динамики ПА}\label{sec:Experiment/Model}
 
 \begin{notequestion}
