--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -1,4 +1,4 @@
-\chapter{Описание моделей динамики исполнительных механизмов ДРК}\label{ch:Propulsion}
+\chapter{Математические модели исполнительных механизмов ДРК}\label{ch:Propulsion}
 
 Исполнительные механизмы ДРК определяют эффективность траекторного маневрирования НПА, а также возможность его динамического позиционирования в точке или зависания в толще воды.
 На практике используются различные конструктивные схемы ДРК, в состав которых могут входить маршевые и подруливающие движители, носовые и кормовые рулевые устройства.
@@ -10,9 +10,9 @@
 При этом на крейсерских скоростях движения использование носовых и кормовых рулей направления и глубины имеет очевидное преимущество по сравнению с подруливающими движителями в части энергопотребления.
 Остановимся на традиционных исполнительных элементах ДРК многофункционального НПА, обеспечивающего выполнение обзорно-поисковых работ с движением в широком диапазоне скоростей хода и динамическое позиционирование в толще воды.
 
-Для корректного и энергетически эффективного решения задачи распределения управляющего воздействия на исполнительные механизмы движительно-рулевого комплекса необходимо корректно статически описать как сам комплекс исполнительных механизмов, так и динамические процессы происходящие в них с учётом гидродинамических особенностей их поведения.
+Для корректного и энергетически эффективного решения задачи управления ДРК необходимо корректно описать как сам комплекс исполнительных механизмов, так и динамические процессы происходящие в них с учётом гидродинамических особенностей их поведения.
 
-\section{Модель маршевого движителя ПА}
+\section{Математичечская модель маршевого движителя ПА}
 
 \begin{noteplan}
 	Тут потом перемоделю через StateSpace вид с учетом особенностей BLDC приводов.
@@ -77,9 +77,9 @@
 
 Последние исследования в области описания динамики движителя представлены в работе \cite{10.1109/robot.2005.1570115}.
 
-Кроме того, разумно рассмотреть декомпозицию задачи и независимо рассмотреть стационарнуб модель гребного винта и модель динамики электрического привода.
+Кроме того, разумно рассмотреть декомпозицию задачи и независимо рассмотреть стационарную модель гребного винта и модель динамики электрического привода.
 
-\subsection{Модель гребного винта}
+\subsection{Математическая модель гребного винта}
 
 Для гребного винта с фиксированным шагом, момент на валу $Q$ и сила (упор) вырабатываемая винтом $T$ зависит от продольной скорости движения аппарата $u$, скорости потока воды $u_a$, а так же скорости вращения винта $n$.
 Кроме этого на работу движителя влияют нестационарные потоки и различные эффекты которые влияют на эффективность работы движителя.
@@ -92,9 +92,9 @@
     \item эффект Куснера (срыв потока).
 \end{itemize}
 
-Приведенные факторы рассматриваются в основном в приложении к суднам.
+Приведенные факторы рассматриваются в основном в приложении к надводным судам.
 Для движителей подводных аппаратов, которые большую часть времени погружены под воду, первыми тремя эффектами можно пренебречь.
-Эффект Куснера связанный со срывом потока связан с высокоамплитудными переключениями сигнала управления движителем и им можно пренебречь.
+Эффект Куснера связанный со срывом потока связан с высокоамплитудными переключениями сигнала управления движителем и им также можно пренебречь.
 
 Квазистационарное моделирование тяги и крутящего момента движителя обычно происходит в терминах кривых подъемной силы и момент сопротивления, которые возможно преобразовать в тягу и момент.
 Подъемная сила и момент сопротивления обычно формируются через безразмерные коэффициенты упора $K_T$ и момента $K_Q$, которые рассчитываются на базе швартовых испытаний движителя.
@@ -113,7 +113,7 @@
 Численные расчеты коэффициентов $K_T$, $K_Q$ обычно проводят на натурных экспериментах в специальных бассейнах.
 При этом, обычно, нестационарными эффектами пренебрегают.
 
-В свою очередь, сами безразмерные коэффициенты $K_T$, $K_Q$ могут быть описаны как функции со следующими параметрами (\cite{oosterveld1975further}):
+В свою очередь, сами безразмерные коэффициенты $K_T$, $K_Q$ могут быть описаны как функции со следующими параметрами \cite{oosterveld1975further}:
 \begin{gather}
     K_T = f_1 \left( J_0, \frac{P}{D}, \frac{A_E}{A_0}, Z \right) \\
     K_Q = f_2 \left( J_0, \frac{P}{D}, \frac{A_E}{A_0}, Z, R_n, \frac{t}{c} \right) 
@@ -134,9 +134,9 @@
     Q = \rho D^5K_Q(J_0)n|n|
 \end{gather}
 
-\subsection{Модель привода движителя}
+\subsection{Математическая модель привода движителя}
 
-Модель привода движителя обычно представляют следующим набором уравнений:
+Модель электропривода движителя обычно представляют следующим набором уравнений:
 \begin{equation}
 	\label{eq:motor_model}
 	\begin{array}{ll}
@@ -166,53 +166,74 @@
     J_m\dot{n} = K_m i_m - Q
 \end{gather}
 
-При различных типах управления приводом, возможно представление его динамики в различной записи.
+При различных методах управления приводом, возможно представление его динамики в различной записи.
 
-\subsection{Типы управления приводом движителя ПА}
-\paragraph{Управление током}
-Пусть реализовано линейное пропорциональное управление током на обмотках мотора, тогда задаваемое напряжение на обмотках будет представлено следующим выражением:
-\begin{equation}
-    V_m = K_p(i_d - i_m),\: K_p>0
-\end{equation}
-\noindent где $i_d$ -- целевое значение тока, тогда уравнение \ref{eq:motor_dynamics} будет преобразовано следующим образом:
-\begin{equation}
-    (R_a + K_p)i_m = -K_mn + K_pi_d
-\end{equation}
+\subsection{Методы управления приводом движителя ПА}
+Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, sorensen20003}.
+Структурные схемы вариантов управления приведены на рисунке \ref{fig:control_methods_schemes}
 
-А модель динамики привода будет представлена в виде:
-\begin{equation}
-    \label{eq:motor_dynamic_current}
-    J_m\dot{n} + \frac{K_m^2}{R_a+K_p}n = \frac{K_m K_p}{R_a + K_p}i_d - Q
-\end{equation}
+\begin{figure}[ht]
+    \begin{minipage}[b][][b]{\linewidth}\centering
+        \includegraphics[width=0.6\linewidth]{modelling/Схема - управление по упору.png} \\ а) управление по моменту электропривода
+    \end{minipage}
+    \hfill
+    \begin{minipage}[b][][b]{\linewidth}\centering
+        \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по оборотам.png} \\ б) управление по оборотам ГВ
+    \end{minipage}
+    \begin{minipage}[b][][b]{\linewidth}\centering
+        \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по упору.png} \\ в) управление по упору
+    \end{minipage}
+    \caption{Структурные схемы вариантов управления движителем.}
+    \label{fig:control_methods_schemes}
+\end{figure}
 
-В случае если $K_p \gg R_a > 0$, то выражение можно упростить:
-\begin{equation}
-    J_m\dot{n} = K_m i_d - Q  
-\end{equation}
+На рисунке 6 приняты следующие обозначения:  
+\begin{itemize}
+    \item $T_{\text{з}}$ -- заданное значение упора движителя;
+    \item $N_y(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция статической швартовной характеристики $T_{\text{мд}}(N_y)$
+    \item $n_{\text{в}}(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция экспериментальной швартовной характеристики $T_{\text{мд}}(n_{\text{в}})$.
+\end{itemize}
 
-\paragraph{Управление моментом}
-Для мотором постоянного тока, создаваемый им момент будет пропорционален току на обмотках, таким образом целевое значение момента $Q_d$ может быть записано следующим образом:
+Каждому варианту управления движителем соответствует индивидуальный регулятор, формирующий код управления электроприводом $N_y$ на основании заданной тяги, соответствующих методу обратных связей и ограничений параметров.
+Для управления электродвижущим моментом привода по разомкнутому контуру выбран самый простой регулятора следующего вида:
 \begin{equation}
-    Q_d = K_m i_d
-\end{equation}
-
-При такой записи, из уравнения \ref{eq:motor_dynamic_current} уравнение динамики для данного режима управления может быть получено сразу же:
-\begin{equation}
-    J_m\dot{n} + \frac{K_m^2}{R_a+K_p}n = \frac{K_p}{R_a + K_p}Q_d - Q
-\end{equation}
-
-В случае если $K_p \gg R_a > 0$, то выражение упращается аналогичным образом:
-\begin{equation}
-    J_m\dot{n} = Q_d - Q  
-\end{equation}
-
-\paragraph{Управление напряжением на обмотках}
-Уравнение динамики при таком режиме управления приводом может быть получено на базе уравнений \ref{eq:motor_dynamics} следующим образом:
-\begin{equation}
-    J_m\dot{n} + \frac{K_m^2}{R_a}n = \frac{K_m}{R_a}V_m - Q
+    \label{eq:thruster_control_torque}
+    N_{y1} = 
+    \left\{
+    \begin{array}{l}
+        N_y(T_{\text{мд}}), -127 < N_y < 127; \\
+        127 \cdot N_y, |N_y| \geq 127.
+    \end{array}
+    \right.
 \end{equation}
 
-\section{Особенности работы движителей подруливающего типа}
+Метод управления с обратной связью по частоте вращения ГВ предполагает предварительное вычисление заданных оборотов ГВ $n_{\text{з}}$ в соответствии с калибровочной характеристикой $n_{\text{в}}(T_{\text{ш}})$ с последующей отработкой П - регулятором:
+\begin{equation}
+    \label{eq:thruster_control_rotation}
+    N_{y2} = 
+    \left\{
+    \begin{array}{l}
+        (n_{\text{з}}(T_{\text{з}})) \cdot K_{np}, -127 < N_y < 127; \\
+        127 \cdot N_y, |N_y| \geq 127.
+    \end{array}
+    \right.
+\end{equation}
+\noindent где $K_{np}$ -- коэффициент П-регулятора.
+
+Управление с обратной связью по измеренному упору движителя может быть реализовано ПИ-регулятором следующего вида:
+\begin{equation}
+    \label{eq:thruster_control_thrust}
+    N_{y3} = 
+    \left\{
+    \begin{array}{l}
+        (T_\text{з} - T_\text{мд}) \cdot K_{tp} +K_{ti} \int(T_\text{з} - T_\text{мд}) dt , -127 < N_y < 127; \\
+        127 \cdot N_y, |N_y| \geq 127.
+    \end{array}
+    \right.
+\end{equation}
+\noindent где $K_{tp}$ и $K_{ti}$, соответственно, пропорциональный и интегральный коэффициенты ПИ-регулятора.
+
+\section{Математическая модель подруливающих движителей ПА}
 Описание работы подруливающего движителя описывается существенно более сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата.
 Научные труды посвященные гидродинамическим особенностям работы подруливающих движителей в первую очередь были проведены в рамках исследования эффективности движительно-рулевых комплексов судов \cite{chislett1966influence, english1964design, brix1973lateral}.
 Кроме того, большое исследование данного вопроса было проведено в докторской диссертации \cite{nienhuis1992analysis}.
@@ -261,10 +282,11 @@
 
 Экспериментальные исследование эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
 
-в работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
-\begin{equation*}
+В работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
+\begin{equation}
+    \label{eq:thrust_tunnel}
 	T_S = T_T \exp \left[ -c \left( \frac{u}{u_j}^2 \right) \right]
-\end{equation*}
+\end{equation}
 \noindent где:
 \begin{itemize}
 	\item $T_S$ -- сила действующая на аппарат в связи с разностью давлений;
@@ -282,9 +304,9 @@
 
 Момент действующий на ПА формируемый упором движителя и гидродинамической силой определяется следующим образом:
 \begin{equation*}
-	M = F_T x_T + (F_T-F_S)x_S
+	M = T_T x_T + (T_T-T_S)x_S
 \end{equation*}
-\noindent где $x_T$ -- расстояние между ЦП подводного аппарата и точкой приложения силы $F_T$, а в свою очередь $x_S$ - это расстояние между ЦП ПА и точкой приложениия силы $F_S$, которая определяется следующим образом:
+\noindent где $x_T$ -- расстояние между ЦП подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦП ПА и точкой приложениия силы $T_S$, которая определяется следующим образом:
 \begin{equation*}
 	x_S = x_T - kD\frac{u}{u_j}
 \end{equation*}
@@ -350,11 +372,14 @@
     \item $U$ -- водоизмещение аппарата, м$^3$.
 \end{itemize}
 
-\section{Численное моделирование поведения исполнителнительных механизмов ДРК в набегающем потоке}
+\section{Моделирование исполнительных механизмов ДРК}
 \subsection{Моделирование маршевого движителя}
 В рамках исследования необходимо определить насколько меняется поведение ИМ ДРК при движении АНПА в набегающем потоке.
 Для численного анализа поведения маршевого движителя в набегающем потоке была разработана его блочная модель (рисунок \ref{fig:modelling-thruster}), где модель привода движителя описывается в соответствии с системой дифференциальных уравнений \ref{eq:motor_model}, а модель гребного винта - в соответствии с уравнениями \ref{eq:propeler_model}.
 Параметры моделирования представлены в таблице \ref{tab:modelling-thruster}.
+В рамках моделирования было реализовано управление электроприводом движителя по моменту в соответствии с выражением \ref{eq:thruster_control_torque}.
+Для расчёта кривых действий ГВ была использована прикладная программа PSOP \cite{инзарцев2018подводные}, которая расчитывает параметры ГВ основываясь на данных регрессионной
+базы серийных испытаний гребных винтов Дайдола-Джонсона \cite{daidola1992propeller}.
 
 \begin{figure}[ht]
     \centering
@@ -363,15 +388,19 @@
     \label{fig:modelling-thruster}
 \end{figure}
 
+\begin{noteplan}
+    Откорректировать картинку с учетом ``динамики гребного винта''
+\end{noteplan}
+
 \begin{table}
-    \caption{Параметры моделирования движителя ПА.}
+    \caption{Параметры маршевого движителя АНПА ``ММТ-3000''.}
     \label{tab:modelling-thruster}
     \centering
     \begin{tabular}{lll}
         \toprule
         \makecell[l]{Наименование \\ параметра} & \makecell[l]{Идентификатор \\ в блочной модели} & Значение \\
         \midrule
-        \multicolumn{3}{c}{Параметры ГВ} \\
+        \multicolumn{3}{c}{Параметры ГВ ( регрессионный анализ)} \\
         \midrule
         Диаметр, м  & D & 0,19\\
         Коэф. $K_T$ & kt\_poly & $-0.096\lambda^2 -0.277\lambda + 0.351$\\
@@ -398,6 +427,10 @@
     \label{fig:modelling-thruster-velocity}
 \end{figure}
 
+\begin{noteplan}
+    Поменять цвета в графике \ref{fig:modelling-thruster-velocity}.
+\end{noteplan}
+
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}
@@ -406,9 +439,16 @@
 \end{figure}
 
 \subsection{Моделирование подруливающего движителя}
+
 В соответствии с моделью влияния набегающего потока на эффективность маршевого движителя для численного анализа поведения подруливающего движителя была создана модель его блочная модель.
 Все параметры модели движителя и гребного винта соответствуют параметрам указанным в таблице \ref{tab:modelling-thruster}.
-Коэффицент подавления потока $C$ был принят с величиной 5.0.
+При этом расчет эффективного упора $T$ создаваемого движителем определялся по следующему выражению:
+\begin{equation*}
+    T = T_T - T_S
+\end{equation*}
+\noindent где $T_T$ -- упор сформированный работой подруливающего движителя, а $T_S$ представляет собой сила действующую на ПА из-за формирорования пропульсивной струёй подруливающего движителя гидродинамической тени на корпусе ПА (выражение \ref{eq:thrust_tunnel}).
+
+В рамках моделирования коэффицент $c$ был принят с величиной 5.0.
 В рамках реализованной модели подруливающего движителя был проведен численное моделирование влияния соосного набегающего потока на эффективное значение упор создаваемый подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity})
 
 \begin{figure}[ht]
@@ -418,9 +458,17 @@
     \label{fig:modelling-tunnel-velocity}
 \end{figure}
 
-\subsection{Моделирование руля управления ПА}
+\subsection{Моделирование рулевых устройств ПА}
 В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0001$.
 Результаты численного моделирования момента создаваемого рулем управления при различных скоростях набегающего потока представлены на рисунке \ref{fig:modelling-rudder-velocity}.
+
+\begin{noteplan}
+    Добавить модель руля аппарата Delphin 2. И её промоделировать.
+\end{noteplan}
+
+\begin{noteplan}
+    Добавить швартовую характеристику АНПА ММТ-3000.
+\end{noteplan}
 
 \begin{figure}[ht]
     \centering
@@ -429,7 +477,7 @@
     \label{fig:modelling-rudder-velocity}
 \end{figure}
 
-\section{Выводы по 2}
+\section{Выводы по главе 2}
 \begin{noteplan}
 	Тут будет про то что проведено моделирование, показано что все ИМ очень сильно зависят от скорости набегающего потока и угла атаки и днейфа.
 \end{noteplan}
