--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -1,7 +1,4 @@
 \chapter{Обзор современных подходов к решению задачи управления ДРК ПА} \label{ch:Statement}
-\begin{noteplan}
-    Тут сейчас полное повторение статьи в ПИР. Вроде это не запрещено. Чуть попозже часть разделов наверное переформатирую.
-\end{noteplan}
 \section{Формулировка задачи управления ДРК ПА}\label{sec:Statement/ProblemStatement}
 Пусть динамика подводного аппарата, оснащенного избыточным ДРК, определена в формулировках метода пространства состояний следующим образом:
 \begin{equation}
@@ -66,23 +63,23 @@
     \item В первом подходе изменение параметров оптимизации $R_{u}$ влияет как на изменение поведения системы в целом, так и на изменение распределения управляющих команд. Во втором случае задачи изолированы друг от друга и изменение $R_{\nu}$ влияет только на поведение системы, не затрагивая работу ДРК.
     \item Реализация системы управления движением может быть архитектурно разделена на два независимых уровня и в рамках каждого из них могут быть применены различные подходы к решению. При этом важно, что задача управления движением подводного аппарата может быть полностью абстрагирована от структуры его ДРК, обеспечив единый и универсальный подход к разработке контура управления движением для произвольного типа ПА.
     \item Ограничения, накладываемые на общую задачу оптимального управления \ref{eq:dynamic_statespace}, существенно усложняют её численное решение, особенно когда подмножество   является невыпуклым. При раздельном подходе можно решать задачу \ref{eq:dynamic_statespace_new}, условно считая задачу без ограничений, при этом накладывая ограничения только на более простую задачу, решение которой с учётом ограничений технически реализуемо современными вычислительными средствами в режиме реального времени.
-    \item Реализация раздельных уровней управления движением позволяет существенно упростить систему аккомодации за счет её переноса в область ответственности задачи распределения управляющих команд.
+    \item Реализация раздельных уровней управления движением позволяет существенно упростить систему аккомодации за счет её переноса в область ответственности задачи управления ДРК.
 \end{itemize}
 
-Отдельно стоит упомянуть случай при $k-n < 0$ для системы \ref{eq:dynamic_statespace}. Такой случай подразумевает, что исполнительных механизмов ДРК меньше чем размерность вектора состояния системы, такие системы можно назвать дефицитными (under-actuated system), а соответствующие ей матрица $B_u$ является переопределённой или плохо обусловленной. В этом случае задача распределения управляющего воздействия тесно связана с системой управления движением ПА, и её сложно сформулировать обособленно. Отдельные примеры решения этой задачи для различных типов АНПА представлены в литературе \cite{10.1049/iet-cta.2009.0265, 10.1109/cdc.2002.1184546}.
+Отдельно стоит упомянуть случай при $k-n < 0$ для системы \ref{eq:dynamic_statespace}. Такой случай подразумевает, что исполнительных механизмов ДРК меньше чем размерность вектора состояния системы, такие системы можно назвать дефицитными (under-actuated system), а соответствующие ей матрица $B_u$ является переопределённой или плохо обусловленной. В этом случае задача управления ДРК тесно связана с системой управления движением ПА, и её сложно сформулировать обособленно. Отдельные примеры решения этой задачи для различных типов АНПА представлены в литературе \cite{10.1049/iet-cta.2009.0265, 10.1109/cdc.2002.1184546}.
 
-\section{Методы решения задачи распределения управляющих воздействий}\label{sec:Statement/Methods}
-Существует достаточно много подходов к постановке и решению задачи распределения управляющих воздействий между ИМ ДРК.
+\section{Методы решения задачи управления ДРК}\label{sec:Statement/Methods}
+Существует достаточно много подходов к постановке и решению задачи управления ДРК.
 В рамках данного обзора они разделены на две большие группы.
-В первую группу отнесены те задачи, в которых вектор виртуального управления пропорционален вектору управления ИМ, то есть $\vect{\nu}(t) = B \vect{u}(t)$, и это допущение было сделано в формулировке задачи распределения управляющими воздействиями. Но в то же время существует отдельная группа систем, где это допущение не может быть принято.
-\subsection{Линейные системы ИМ}
+В первую группу отнесены те задачи, в которых вектор виртуального управления пропорционален вектору управления ИМ, то есть $\vect{\nu}(t) = B \vect{u}(t)$, и это допущение было сделано в формулировке задачи управления ДРК. Но в то же время существует отдельная группа систем, где это допущение не может быть принято.
+\subsection{Линейные системы исполнительных механизмов ДРК}
 
 В подавляющем большинстве случаев к этой группе относят практически все телеуправляемые необитаемые подводные аппараты (ТНПА) с фиксированными движителями, а также большая часть АНПА оснащенных фиксированными движителями и/или рулями управления.
 В статье \cite{yuh2000design} представлен обзор различных АНПА разработанных до 2000-го года за рубежом.
 Большинство представленных аппаратов оснащено одним или двумя маршевыми движителями, которые работают совместно с рулями управления.
 К этой группе также могут быть отнесены такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и другие аппараты разработанные в Институте проблем морских технологий ДВО РАН.
 
-Для линейных систем исполнительных механизмов исторически первыми появились статические модели, описывающие их поведение, и соответствующие им статические методы оптимизации, но после 2000-го года начали появляться исследования, в рамках которых учитывалась динамическая модель исполнительных механизмов при решении задачи оптимального распределения.
+Для линейных систем исполнительных механизмов исторически первыми появились статические модели, описывающие их поведение, и соответствующие им статические методы оптимизации, но после 2000-го года начали появляться исследования, в рамках которых учитывалась динамическая модель исполнительных механизмов при решении задачи оптимального управления ДРК.
 
 \subsubsection{Аналитическое решение при $\vect{u} \in \mathspace{R}^k$}
 Отдельным случаем является аналитическое решение задачи при отсутствии ограничений на управляющие команды, т.е. $\vect{u} \in \mathspace{R}^k$.
@@ -110,9 +107,9 @@
 \end{equation}
 \noindent где $\epsilon \geq 0$ представляет собой бесконечно малую добавку фактически не влияющую на решение задачи, но обеспечивающую существование обратной матрицы.
 
-\subsubsection{Прямое распределение с масштабированием} \label{sssec:AllocationFix}
+\subsubsection{Прямое управление ДРК с масштабированием} \label{sssec:AllocationFix}
 Данный подход не обеспечивает оптимального решения, но позволяет получить его в условиях линейных ограничений $\vect{u} \in \mathspace{U} \subset \mathspace{R}^k$ накладываемых на исполнительные механизмы.
-Данный метод подразумевает поиск такого набора линейных положительных сжимающих коэффициентов $\vect{\alpha} \in [0,1]$, при котором решение задачи распределения управляющего воздействия не выходит за рамки допустимого множества $\mathspace{U}$ \cite{durham1993constrained}, при этом новая линейная оптимизационная задача ставится следующим образом:
+Данный метод подразумевает поиск такого набора линейных положительных сжимающих коэффициентов $\vect{\alpha} \in [0,1]$, при котором решение задачи управления ДРК не выходит за рамки допустимого множества $\mathspace{U}$ \cite{durham1993constrained}, при этом новая линейная оптимизационная задача ставится следующим образом:
 \begin{gather}
     \max \vect{\alpha} \\
     \text{при условии } B\vect{u} = \vect{\alpha} \vect{\nu_c}, \vect{\alpha} \vect{\nu_c} \in \mathspace{A}
@@ -121,7 +118,7 @@
 Решение задачи поиска такого набора сжимающих коэффициентов встречается в зарубежной литературе \cite{bordingnon1995closed, petersen2002fast}.
 
 Одна из вариаций данного подхода, которая используется в аппаратах Института проблем морских технологий ДВО РАН формулируется следующим образом \cite{костенко2015вопросу}.
-Пусть $\nu_c^{prio}$ представляет собой команду управления $\nu_c$ в которой оси расставлены в соответствии с уменьшением степени приоритета, $l=[l_1,l_2, \ldots, l_m]$ где $l_i \in [0,1]$ представляет собой набор коэффициентов насыщения $i$-ой оси управления, а $u^{ub}$ представляет собой решение задачи распределения без ограничений, полученное в соответствии с выражением \ref{eq:allocation_unbound}. Тогда можно решить задачу распределения управляющих значений итерационным методом с фиксированным количеством шагов. Так для оси с максимальным приоритетом, т.е. для $v_c^1$ сжимающий коэффициент будет записан следующим образом:
+Пусть $\nu_c^{prio}$ представляет собой команду управления $\nu_c$ в которой оси расставлены в соответствии с уменьшением степени приоритета, $l=[l_1,l_2, \ldots, l_m]$ где $l_i \in [0,1]$ представляет собой набор коэффициентов насыщения $i$-ой оси управления, а $u^{ub}$ представляет собой решение задачи управления ДРК без ограничений, полученное в соответствии с выражением \ref{eq:allocation_unbound}. Тогда можно решить задачу управления ДРК итерационным методом с фиксированным количеством шагов. Так для оси с максимальным приоритетом, т.е. для $v_c^1$ сжимающий коэффициент будет записан следующим образом:
 \begin{equation}
     \alpha_1 = \min \left\{ \frac{l_1 \cdot u_j^{lim}}{u_j^{ub}} \right\}_{j=1}^k
 \end{equation}
@@ -148,7 +145,7 @@
 \noindent где $H = 2 \cdot diag(q_1,\ldots,q_k, w_1,\ldots,w_m)$ представляет собой диагональную матрицу положительно определённых весовых коэффициентов для ИМ ДРК ($q_1,\ldots,q_k$) и элементов вектора виртуального управления ($w_1,\ldots,w_m$).
 
 В данной постановке задачи используются различные математические методы поиска решения, например, метод активного набора (active set) или метод внутренней точки (interior point).
-Оба метода использовались при решении задачи распределения для квадратичной формулировки проблемы \cite{petersen2005constrained, harkegard2002efficient}.
+Оба метода использовались при квадратичной формулировки задачи управления ДРК \cite{petersen2005constrained, harkegard2002efficient}.
 Функционал $J$ может быть записан также и в $L_1$ метрике, но особенностью методов линейного программирования при решении таких задач является поиск оптимального решения по граням и вершинам области допустимых значений границ подмножества $\mathspace{U}$. 
 Физический смысл этого заключается в тенденции максимальной загрузки минимального количества ИМ \cite{bodson2002evaluation}, что существенно повышает износ отдельных ИМ и ведёт к чрезмерной нагрузке на систему энергообеспечения. В то время как методы квадратичного программирования, в свою очередь, стремятся найти такое решение, которое распределяет равную нагрузку на максимальное количество элементов управления.
 
@@ -156,9 +153,9 @@
 Предыдущие формулировки задачи распределения вектора управления строились на базе статической модели ИМ и не учитывали динамических процессов, которые происходят в них.
 В работах \cite{10.2514/1.11607, 10.1016/j.automatica.2008.03.031} были предложены первые попытки формулировки задачи распределения вектора управления с учетом динамики ИМ.
 
-В работе \cite{10.1016/j.automatica.2009.01.013} представлен новый подход для учета динамики исполнительных приводов. Его суть заключается в создании подпространств глобального пространства решения задачи распределения управляющих команд, которые отражают «виртуальную» динамику процессов, происходящих в исполнительных механизмах. Позже этот подход был развит в работах \cite{10.1016/j.automatica.2014.10.112, 10.1109/cdc.2012.6426209}.
+В работе \cite{10.1016/j.automatica.2009.01.013} представлен новый подход для учета динамики исполнительных приводов. Его суть заключается в создании подпространств глобального пространства решения задачи управления ДРК, которые отражают «виртуальную» динамику процессов, происходящих в исполнительных механизмах. Позже этот подход был развит в работах \cite{10.1016/j.automatica.2014.10.112, 10.1109/cdc.2012.6426209}.
 
-В рамках нового подхода, динамическая задача распределения управляющих воздействий (dynamic control allocation) приобрела новую формальную запись:
+В рамках нового подхода, динамическая задача управления ДРК (dynamic control allocation) приобрела новую формальную запись:
 
 \begin{equation}
     \left\{
@@ -181,12 +178,12 @@
 
 Недостатком методов, представленных выше, является необходимость знания модели исполнительных механизмов. Для решения этой проблемы в работе \cite{10.1016/j.automatica.2020.109265} авторами представлен новый подход, в котором параметры динамики ИМ определяются в режиме реального времени на основе методов обучения с подкреплением.
 
-\subsubsection{Динамическое распределение на базе прогнозирующих моделей}
+\subsubsection{Динамическое управление ДРК на базе прогнозирующих моделей}
 Управление с прогнозирующими моделями (Model predictive control) представляет собой один из самых современных подходов в области теории управления. 
 Изначально он применялся при управлении производственными процессами, где большие постоянные времени переходных процессов позволяли его применять, т.к. он крайне ресурсоёмок.
-Но с ростом вычислительных мощностей компьютеров и встраиваемых систем появилась возможность применения данного подхода для мобильных объектов управления. В рамках этого подхода сформировался отдельных подкласс под названием «Model predictive control allocation» \cite{10.1016/j.ifacol.2019.08.065, 10.1016/j.ifacol.2015.10.048, 10.1007/s11768-019-7231-9} предназначенный для решения задачи распределения управляющих воздействий на основе прогнозирующих моделей.
+Но с ростом вычислительных мощностей компьютеров и встраиваемых систем появилась возможность применения данного подхода для мобильных объектов управления. В рамках этого подхода сформировался отдельных подкласс под названием «Model predictive control allocation» \cite{10.1016/j.ifacol.2019.08.065, 10.1016/j.ifacol.2015.10.048, 10.1007/s11768-019-7231-9} предназначенный для решения задачи управления ДРК на основе прогнозирующих моделей.
 
-Задача распределения в данном подходе записывается следующим образом \cite{10.1109/icca.2011.6137940}. Пусть исполнительные механизмы ДРК представлены в формулировках метода пространства состояний следующим образом:
+Задача управления ДРК в данном подходе записывается следующим образом \cite{10.1109/icca.2011.6137940}. Пусть исполнительные механизмы ДРК представлены в формулировках метода пространства состояний следующим образом:
 
 \begin{equation}
     \dot{\vect{u}}(t) = A_u\vect{u}(t) + B_u \vect{u}_{cmd}(t)
@@ -198,7 +195,7 @@
     \item $\dot{\vect{u}}(t)$ -- управление сформированное ИМ.
 \end{itemize}
 
-Тогда постановка задачи распределения управления на базе прогнозирующей модели будет выглядеть следующим образом:
+Тогда постановка задачи управления ДРК на базе прогнозирующей модели будет выглядеть следующим образом:
 
 \begin{equation}
 \begin{matrix*}[c]
@@ -224,7 +221,7 @@
 
 где $W{j}$ представляет собой матрицу весовых коэффициентов которая отражает значимость минимизации невязки с целевой командой управления $\vect{\nu}^*$ в момент времени $j$. В свою очередь весовой коэффициент $W_a(i)$ отражает стоимость использования $i$-го исполнительного механизма.
 
-\subsection{Нелинейные системы ИМ}
+\subsection{Нелинейные системы исполнительных механизмов ДРК}
 
 Существуют более сложные системы ДРК, так например в экспериментальном автономном подводном аппарате «KAUV-1» \cite{10.1007/s12555-012-0385-6} маршевый движитель расположен на поворотной платформе, которая обеспечивает его вращение в горизонтальной плоскости ССК, в то время как система изменяемого положения центра масс обеспечивает создание момента по каналу дифферента.
 Еще одним примером сложного движительно-рулевого комплекса является автономный подводный аппарат «Jinbei» \cite{10.1109/oceans-yeosu.2012.6263496} на котором установлена пара вращательных подруливающих движителей.
@@ -235,7 +232,7 @@
 Кроме того, в этом случае область решения является невыпуклой. 
 Для такого класса задачи подавляющая часть методов описанные выше не работают и требуются другие подходы.
 \subsubsection{Методы нелинейного программирования}
-В работах \cite{10.1109/tcst.2003.821952, poonamallee2004nonlinear} показано, что методы нелинейного программирования можно использовать для решения задачи распределения управляющих воздействий.
+В работах \cite{10.1109/tcst.2003.821952, poonamallee2004nonlinear} показано, что методы нелинейного программирования можно использовать для решения задачи управления ДРК.
 Основным используемым подходом является локальная аппроксимация квадратичного функционала и линеаризация ограничений. 
 
 Это приводит к численному методу решения оптимизационной задачи, аналогичному последовательному квадратичному программированию (Sequential quadratic programming), за исключением того, что линейное либо квадратичное приближение необходимо выполнять для каждой итерации расчётов.
@@ -243,13 +240,13 @@
 Недостатком такого подхода является то, что при высокой нелинейности исполнительных механизмов и сильной невыпуклости области решения данный метод может остаться в локальном экстремуме, не дойдя до глобального, что может существенно ухудшить качество управления.
 
 \subsubsection{Динамический поиск оптимума}
-В работе \cite{10.1109/cdc.2004.1429240} автором предлагается переформулировать задачу поиска оптимального распределения управляющего воздействия как поиск управляющей функции Ляпунова. В частности, пусть задан функционал $J'(\vect{x}, \vect{u}, t) = J(\vect{x}, \vect{u}, t) + \delta(\vect{u})$, где $\delta(\vect{u})$ представляет собой специальную штрафную функцию которая удерживает $\vect{u}$ в рамках подпространства $\mathspace{U}$. Тогда функция Ляпунова будет записана следующим образом:
+В работе \cite{10.1109/cdc.2004.1429240} автором предлагается переформулировать задачу поиска оптимального управления ДРК как поиск управляющей функции Ляпунова. В частности, пусть задан функционал $J'(\vect{x}, \vect{u}, t) = J(\vect{x}, \vect{u}, t) + \delta(\vect{u})$, где $\delta(\vect{u})$ представляет собой специальную штрафную функцию которая удерживает $\vect{u}$ в рамках подпространства $\mathspace{U}$. Тогда функция Ляпунова будет записана следующим образом:
 \begin{equation}
     L(\vect{x}, \vect{u}, t, \lambda) = J'(\vect{x}, \vect{u}, t) + \lambda^T(\nu_c - h(\vect{u},\vect{x},t))
 \end{equation}
 \noindent где $\lambda$ -- множитель Лагранжа.
 
-Пусть существует функция управления Ляпунова $V_0(\vect{x},t)$ (Control-Lyapunov function) которая была сформирована системой управления НПА, тогда задача оптимального распределения управляющего воздействия при этом подходе будет записана следующим образом:
+Пусть существует функция управления Ляпунова $V_0(\vect{x},t)$ (Control-Lyapunov function) которая была сформирована системой управления НПА, тогда задача оптимального управления ДРК при этом подходе будет записана следующим образом:
 \begin{equation}
     V(\vect{x}, \vect{u}, t, \lambda) = \sigma V_0(\vect{x}, t) + \frac{1}{2}
     \left(
@@ -259,15 +256,15 @@
 \end{equation}
 \noindent где $\sigma$ -- некоторый множитель.
 
-Этот подход был развит позже для задачи распределения управляющих воздействий для нелинейных ИМ с учетом их динамики \cite{10.4173/mic.2008.2.4}.
-\section{Программные средства для решения задачи распределения управляющих воздействий}
-Для решения задачи оптимизации распределения управляющего воздейсвия во встраиваемых системах управления, используемых в подводных аппаратах желательно использовать легковесные библиотеки на языках программирования С++/С, которые позволяют решать оптимизационные задачи в режиме реального времени и легко встраиваемы в ПО аппарата.
+Этот подход был развит позже для задачи управления ДРК для нелинейных ИМ с учетом их динамики \cite{10.4173/mic.2008.2.4}.
+\section{Программные средства для решения задачи управления ДРК}
+Для решения задачи оптимизации управления ДРК во встраиваемых системах управления, используемых в подводных аппаратах желательно использовать легковесные библиотеки на языках программирования С++/С, которые позволяют решать оптимизационные задачи в режиме реального времени и легко встраиваемы в ПО аппарата.
 
 Основные известные программные реализации с открытым исходным кодом которые подходят для описываемой задачи следующие:
 \begin{itemize}
-    \item CVXGEN -- реализация решения задачи квадратичной оптимизации на основе метода внутренней точки с автоматической генерацией С кода \cite{mattingley2010real}. В работе \cite{10.1109/icca.2011.6137940} показано что этот программный пакет может быть использован для решения задачи оптимального распределения в формулировках MPC подхода в режиме реального времени.
+    \item CVXGEN -- реализация решения задачи квадратичной оптимизации на основе метода внутренней точки с автоматической генерацией С кода \cite{mattingley2010real}. В работе \cite{10.1109/icca.2011.6137940} показано что этот программный пакет может быть использован для решения задачи оптимального управления ДРК в формулировках управления с прогнозирующими моделями в режиме реального времени.
     \item qpOASES -- реализация решения задачи квадратичной оптимизации на основе метода активных множеств на языке С++ \cite{ferreau2014qpoases}.
-    \item FiOrdOs -- специальный программный модуль к MATLAB, который позволяет автоматически сформировать код для численного решения задачи квадратичной оптимизации с линейными ограничениями на языке С. Может быть использован для решения задачи оптимального распределения в формулировках MPC \cite{jones2012fast}.
+    \item FiOrdOs -- специальный программный модуль к MATLAB, который позволяет автоматически сформировать код для численного решения задачи квадратичной оптимизации с линейными ограничениями на языке С. Может быть использован для решения задачи оптимального управления ДРК в формулировках управления с прогнозирующими моделями \cite{jones2012fast}.
     \item ACADO -- специальная программная среда и набор алгоритмов для решения задачи квадратичной оптимизации с ограничениями, динамической оптимизации, задачи MPC. В составе пакета есть специальные методы для автоматической генерации С кода \cite{houska2011acado}.
     \item MPT (Multi-Parametric Toolbox) -- специальный бесплатный пакет к MATLAB включающий в себя реализацию оптимального управления линейными, гибридными и нелинейными системами. Может быть задан линейный и квадратичный функционал качества. Есть автоматическая генерация кода на языке С \cite{kvasnica2004multi}.
 \end{itemize}
@@ -282,7 +279,7 @@
 Задачу управления движением подводного аппарата можно ставить различными способами.
 Один из них заключается в разделении задачи на две независимых, которые решаются последовательно: управление движением НПА и управление исполнительными механизмами.
 Показано, что при такой декомпозиции управления оптимальность решения сохраняется.
-В главе приведены различные подходы и методы решения задачи распределения управляющих воздействий в зависимости от типа используемого ДРК.
+В главе приведены различные подходы и методы решения задачи управления ДРК в зависимости от его типа.
 Кроме того, представлены программные пакеты, которые позволяют реализовать рассмотренные подходы в компьютерах и встраиваемых системах. 
 
 Описываемая задача представляется достаточно проработанной, но в тоже время существует большой пласт особенностей динамики ИМ, которые до сих пор не учтены в представленных подходах:
@@ -295,16 +292,20 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их поведения в набегающем потоке;
-  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК оснащенного произвольным набором исполнительных механизмов;
-  \item разработать и реализовать дублирующий метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
-  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод распределения управляющих воздействий для АНПА устойчивый к неполному знанию скорости набегающего потока;
-  \item разработать и реализовать метод плавного перераспределения управляющего воздействия при переходах между различными типами движения;
-  \item провести проверку эффективности разработанного метода распределения управляющих воздействий на базе модельных экспериментов.
+  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
+  \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
+  \item разработать и реализовать метод плавного управления ДРК при переходах между различными типами движения;
+  \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
 
+\begin{notequestion}
+    По целям и задачам. Я ориентируюсь на диссертацию Самотыловой 19-го года. Она методологически очень хорошо написана. Там именно так. Цели и задачи во введении (это для тех кто дальше введения не читает) и они же в первой главе (как логичное продолжение обзора).
+\end{notequestion}
+
 \section{Выводы по главе 1}\label{sec:Statement/Conclusion}
-В первой главе приводится обзор современных методов и подхов к решению задачи распределения управляющего воздействия на исполнительные механизмы ДРК подводного аппарата.
+В первой главе приводится обзор современных методов и подхов к решению задачи оптимального управления ДРК.
 
 Отмечено, что хоть тема достаточно проработана, но в работах почти никак не фигурируют гидродинамические особенности работы исполнительных механизмов в набегающем потоке и уменьшение их результирующей силы, что будет детально рассмотрено в следующих главах диссертации.
 
