--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -1,6 +1,6 @@
-\chapter{Оценка скорости набегающего потока в устоявшемся режиме движения ПА по изменению параметров работы маршевых движителей}\label{ch:Velocity}
+\chapter{Оценка скорости набегающего потока в установившемся режиме движения ПА по изменению параметров работы маршевых движителей}\label{ch:Velocity}
 
-\section{Анализ модели движителя в установившемся режиме работы}
+\section{Анализ модели маршевого движителя в установившемся режиме работы}
 Упор создаваемый гребным винтом движителя $T$ и момент сопротивления вращению $Q$ формируемый при этом на валу определяется следующими формулами \cite{пантов1973основы}:
 \begin{gather}
     T(n, J_0) = K_T (J_0) \rho D^4 n |n| \notag \\
@@ -93,7 +93,7 @@
 Этот коэффициент важен для движителей судов, т.к., зачастую, движители там установлены в гидродинамической тени, которую создает корпус судна и там учет этого параметра необходим.
 При разработке автономных необитаемых подводных аппаратов, за счет малого и обтекаемого корпуса и, зачастую, за счет выноса маршевой группы из гидродинамической тени создаваемой аппаратом, этим коэффициентом можно пренебречь.
 
-\section{Учёт пространственной ориентации движителей при оценке скорости по параметрам их работы}
+\section{Учёт пространственной ориентации маршевых движителей при оценке скорости набегающего потока}
 В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей. Примером таких аппаратов может служить линейка АНПА ``Remus'' \cite{allen1997remus, kukulya2010under}.
 
 С другой стороны, отечественная практика разработки автономных подводных аппаратов отходит от мировой и в основном заключается в использовании четырех движителей, расположенных в кормовой секции под некоторым углом к продольной оси аппарата.
@@ -130,7 +130,7 @@
     Тут еще не доработано. Добавлю про расчет угла атаки и дрейфа и возможность расчета параметров течения, если есть данные с доплера.
 \end{noteplan}
 
-\section{Исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
+\section{Экспериментальное исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
 В рамках исследования была проверена гипотеза о работоспособности метода оценки скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
 
 \begin{noteplan}
@@ -238,7 +238,7 @@
     \label{fig:mmt3000_propeller}
 \end{figure}
 
-\subsection{Анализ швартовных характеристик движителя}
+\subsection{Анализ результатов швартовных испытаний маршевых движителя}
 Были проведён анализ результатов швартовных испытаний движителя в рамках которого были получены значения усилия создаваемого движителем и потребляемого при этом тока в зависимости от заданного кода управления задаваемого в систему управления движителем.
 
 Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
@@ -299,7 +299,12 @@
     \label{fig:mmt3000_propeller_kq_bollard}
 \end{figure}
 
-\subsection{Анализ параметров АНПА при совершении скоростных маневров}
+\subsection{Анализ гидродинамических характеристик АНПА по результатам натурных испытаний}
+
+\begin{notequestion}
+    Не уверен по поводу названия главы. Ведь речь не о ГДХ, мы же проводим оценку скорости.
+\end{notequestion}
+
 В качестве данных для анализов использовались калибровочные запуски АНПА ``ММТ-3000'' для расчета ГДХ подводного аппарата, полученные в 2019 году в заливе Патрокл.
 Для расчета ГДХ были проведены запуски подводного аппарата на фиксированной глубине со ступенчатым изменением скорости продольного движения.
 График изменения скорости представлен на рисунке \ref{fig:mmt3000_velocity}.
