--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1105,3 +1105,20 @@
   publisher={Springer},
   language={english}
 }
+
+@article{daidola1992propeller,
+  title={Propeller Selection and Optimization Program},
+  author={Daidola, JC and Johnson, FM},
+  journal={Manual for the Society of Naval Architects and Marine. NY.: Society of Naval Architects and Marine},
+  year={1992},
+  language={english}
+}
+
+@article{sorensen20003,
+  title={3.6 Methods for Thrust Control},
+  author={S{\o}rensen, Asgeir J},
+  journal={The Ocean Engineering Handbook},
+  year={2000},
+  publisher={CRC Press},
+  language={english}
+}
