--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,32 +1,28 @@
 {\actuality}
-Задача распределения управляющих воздействий (control allocation) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, основные и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
-
-\begin{notequestion}
-    Надо понять как лучше говорить. ``Управление ДРК'' или ``Распределение управляющих воздействий на ДРК''.
-\end{notequestion}
+Задача управления ДРК (control allocation в иностранной терминологии) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, основные и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
 
 \begin{itemize}
     \item в виду того, что подводные операции сопряжены с высокой степенью риска, избыточность необходима для реализации функций резервирования систем управления движением подводного аппарата;
     \item в силу гидродинамических особенностей функционирования при различных режимах движения (позиционный, крейсерский) часть исполнительных механизмов ДРК будет работать лучше или хуже; в соответствии с этим, при разработке многоцелевых подводных аппаратов необходимо использовать избыточные комплекты ИМ \cite{valasek2002design}.
-    \item избыточная конфигурация ДРК при энергетически оптимальном распределении управляющего воздействия позволяет сократить затраты энергии на 20-25\% по сравнению с эквивалентной неизбыточной конфигурацией \cite{бриллиантов2005разработка}.
+    \item избыточная конфигурация ДРК при энергетически оптимальном управлении ДРК позволяет сократить затраты энергии на 20-25\% по сравнению с эквивалентной неизбыточной конфигурацией \cite{бриллиантов2005разработка}.
 \end{itemize}
 
-Решение задачи распределения управляющих воздействий ДРК позволяет оптимизировать энергетические затраты на движение ПА, обеспечить отказоустойчивость системы управления, и уменьшить механический износ ИМ в условиях накладываемых на них ограничений \cite{enns1998control}.
+Решение задачи управления ДРК позволяет оптимизировать энергетические затраты на движение ПА, обеспечить отказоустойчивость системы управления, и уменьшить механический износ ИМ в условиях накладываемых на них ограничений \cite{enns1998control}.
 Исторически первой эта задача возникла в двух областях: для систем управления многостепенными манипуляторами \cite{craig2009introduction} и самолётами \cite{bordignon1996constrained}. 
 Основной целью тогда было создание систем аккомодации, то есть формирования такой системы управления движением, которая была бы устойчива к выходу из строя отдельных исполнительных механизмов.
 
-В общем случае задача распределения управляющих воздействий для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для высокочастотных управляющих контуров в условиях операционных систем реального времени.
+В общем случае задача управления ДРК для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для управляющих контуров в условиях операционных систем реального времени.
 
 {\progress}
-В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче распределения управляющих воздействий, включая как отдельные приложения – суда и подводные аппараты \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035} в рамках которой рассматриваются различные методы распределения управляющих воздействий в приложении к различным областям робототехники.
+В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче управления ДРК, включая как отдельные приложения – суда и подводные аппараты \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035} в рамках которой рассматриваются различные методы управления ДРК в приложении к различным областям робототехники.
 В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком \cite{мартынова2020подход, зыбин2014аналитическое}.
-Впрочем, упоминание задачи распределения управляющих воздействий можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
+Впрочем, упоминание задачи управления ДРК можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
 
-Актуальность задачи распределения управляющих воздействий описана в большей степени в трудах зарубежных ученых: Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
+Актуальность задачи управления ДРК описана в большей степени в трудах зарубежных ученых: Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
 
 {\object} является движительно-рулевой комплекс автономного необитаемого подводного аппарата.
 
-{\subject} является алгоритмы и методы управления движительно-рулевым автономного необитаемого подводного аппарата, методы идентификации параметров его работы, численные методы и комплексы программ для реализации методов управления им.
+{\subject} является алгоритмы и методы управления ДРК автономного необитаемого подводного аппарата, методы идентификации параметров его работы, численные методы и комплексы программ для реализации методов управления им.
 % \ifsynopsis
 % Этот абзац появляется только в~автореферате.
 % Для формирования блоков, которые будут обрабатываться только в~автореферате,
@@ -44,12 +40,12 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их поведения в набегающем потоке;
-  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК оснащенного произвольным набором исполнительных механизмов;
-  \item разработать и реализовать дублирующий метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
-  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод распределения управляющих воздействий для АНПА устойчивый к неполному знанию скорости набегающего потока;
-  \item разработать и реализовать метод плавного перераспределения управляющего воздействия при переходах между различными типами движения;
-  \item провести проверку эффективности разработанного метода распределения управляющих воздействий на базе модельных экспериментов.
+  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
+  \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
+  \item разработать и реализовать метод плавного управления ДРК при переходах между различными типами движения;
+  \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
 \begin{noteplan}
     Думаю задачи в самом конце оформим более подробно. Пока черновик.
@@ -58,8 +54,8 @@
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
   \item разработан метод определения скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы маршевых движителей;
-  \item разработан метод формирования глобальных границ и коэффициентов решения задачи оптимального распределения управляющих воздействий ДРК адаптивный к скорости набегающего потока и оценки его достоверности;
-  \item разработан метод перераспределения управляющих воздействий при смене типа движения многофункционального АНПА.
+  \item разработан метод формирования глобальных границ и коэффициентов решения задачи оптимального управления ДРК адаптивный к скорости набегающего потока и точности его определения;
+  \item разработан метод управления ДРК при вариации скоростей движения многофункционального АНПА и выходе из строя элементов ДРК.
 \end{enumerate}
 \begin{noteplan}
     В новизне надо будет показать конкретные числовые преимущества каждого из предложений по сравнению с существующими вариантами. Уже по результатам моделироваия и испытаний будет на чистовую написано.
@@ -70,12 +66,10 @@
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Предложен метод формального описания и анализа ДРК подводного аппарата, который отличается тем, что каждый движитель 
-
-  с произвольным количеством и типом используемых исполнительных механизмов и его программная реализация;
-  \item метод оценки скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы его маршевых движителей;
-  \item метод энергоэффективного и отказоустойчивого распределения управляющих воздействий на ДРК подводного аппарата адаптивный к скорости набегающего потока и оценки его достоверности;
-  \item программная реализация метода перераспределения управляющих воздействий при смене типа движения многофункционального АНПА.
+  \item Метод формального описания избыточного ДРК подводного аппарата с произвольным количеством и типом ИМ, а также его реализация;
+  \item метод оценки скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы электропривода его маршевых движителей;
+  \item метод энергоэффективного и отказоустойчивого управления ДРК подводного аппарата адаптивный к скорости набегающего потока и точности его определения;
+  \item программная реализация метода управления ДРК при вариации скорости движения многофункционального АНПА.
 \end{enumerate}
 
 {\reliability} Достоверность полученных выводов определяется корректным применением методов математического моделирования сложных систем и обработки экспериментальных данных. Обоснованность полученных методов и алгоритмов основывается на сопоставлении полученных результатов с результатами, полученными другими известными методами и алгоритмами.
@@ -93,17 +87,16 @@
     \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2019'' (г. Владивосток, 1-4 сентября 2019 года);
     \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2020'' (г. Владивосток, 5-8 октября 2019 года);
     \item ``Global Oceans 2020: Singapore - U.S. Gulf Coast'' (5-14 октября 2020 года);
-    \item 
 \end{enumerate}
 \begin{noteplan}
     В обсуждениях пока без разбору все конференции что вспомнил.
 \end{noteplan}
 
-{\contribution} Автор принимал участие в постановке цели и задач по теме исследования, разработал методы и алгоритмы, предложенные в данной работе, обработал и проанализировал экспериментальные данные, участвовал в обсуждении полученных результатов, подготовке научных статей, материалов конференций, участвовал на конференциях и семинарах.
+{\contribution} Автор принимал участие в постановке цели и задач по теме исследования, разработал и реализовал программно методы и алгоритмы, предложенные в данной работе, обработал и проанализировал экспериментальные данные, участвовал в обсуждении полученных результатов, подготовке научных статей, материалов конференций, участвовал на конференциях и семинарах.
 
 \ifnumequal{\value{bibliosel}}{0}
 {%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
-    {\publications} Основные результаты по теме диссертации изложены
+    {\publications} Основные результаты по теме ВКР изложены
     в~XX~печатных изданиях,
     X из которых изданы в журналах, рекомендованных ВАК,
     X "--- в тезисах докладов.
@@ -132,7 +125,7 @@
         %
         \nocite{*}%
         %
-        {\publications} Основные результаты по теме диссертации изложены в~\arabic{citeauthor}~печатных изданиях,
+        {\publications} Основные результаты по теме ВКР изложены в~\arabic{citeauthor}~печатных изданиях,
         \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК\sloppy%
         \ifnum \value{citeauthorscopuswos}>0%
             , \arabic{citeauthorscopuswos} "--- в~периодических научных журналах, индексируемых Web of~Science и Scopus\sloppy%
@@ -160,7 +153,7 @@
             \formbytotal{citeauthorprogram}{программ}{а}{ы}{} для ЭВМ.
             \fi%
         \fi%
-        % К публикациям, в которых излагаются основные научные результаты диссертации на соискание учёной
+        % К публикациям, в которых излагаются основные научные результаты диссертации на сометоды иискание учёной
         % степени, в рецензируемых изданиях приравниваются патенты на изобретения, патенты (свидетельства) на
         % полезную модель, патенты на промышленный образец, патенты на селекционные достижения, свидетельства
         % на программу для электронных вычислительных машин, базу данных, топологию интегральных микросхем,
@@ -171,11 +164,11 @@
         % Процитированные здесь работы:
         %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthorimportant`.
         %  * ни на что не влияют в противном случае
-        \nocite{vakbib2}%vak
-        \nocite{patbib1}%patent
-        \nocite{progbib1}%program
-        \nocite{bib1}%other
-        \nocite{confbib1}%conf
+        % \nocite{vakbib2}%vak
+        % \nocite{patbib1}%patent
+        % \nocite{progbib1}%program
+        % \nocite{bib1}%other
+        % \nocite{confbib1}%conf
     \end{refsection}%
         %
         % Всё, что вне этих двух refsection, это refsection=0,
